<resources>    <string name="app_name">MPOS Test</string>    <string name="app_name_dev">MPOS Test</string>    <string name="home_name">Home</string>    <string name="trans_name">Payment</string>    <string name="card_name">Card Info</string>    <string name="orderList_name">Orders</string>    <string name="itemsScreen_name">Create</string>    <string name="historyScreen_name">History</string>    <string name="settings_name">Settings</string>    <string name="reports_name">Reports</string>    <string name="basket">Cart</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <!-- Strings for login screen -->    <string name="login_name">Name</string>    <string name="login_password">Password</string>    <string name="login_btnText">Log in</string>    <!-- Strings for home screen -->    <string name="card_info_btn_text">Card Info</string>    <string name="history_btn_text">History</string>    <string name="transaction_btn_text">Payment</string>    <string name="create_order_btn_text">Create</string>    <string name="total_sales">Total Sales:&#160;&#160;&#160;</string>    <string name="num_receipts">Number of receipts</string>    <string name="user_name_label">User name</string>    <!-- Strings for Transaction History Screen -->    <string name="transaction_history">Transaction History</string>    <string name="search_for_order_no">Search for Order No</string>    <!-- Strings for Payment Screen -->    <string name="enter_sum">Enter Amount</string>    <!-- Strings for Order List screen -->    <string name="vat">Moms</string>    <string name="order_no">Order No</string>    <string name="pending">Pending</string>    <string name="completed">Completed</string>    <string name="delivered">Delivered</string>    <string name="canceled">Canceled</string>    <string name="andmore"> ... and more </string>    <!-- Strings for Basket Screen -->    <string name="send">Send</string>    <string name="discount">Discount %:</string>    <string name="coupon">Coupon:</string>    <string name="table_number">Table No:</string>    <string name="pay_now">Pay Now?</string>    <!-- Strings for payment options screen -->    <string name="payment_options_title">Payment Options</string>    <string name="confirm">Confirm</string>    <string name="sorry_title">Sorry!</string>    <string name="OK">OK</string>    <string name="cart_empty">Your cart is empty.</string>    <string name="payOption_Qpay">Qpay Credits</string>    <string name="payDesc_Qpay">Pay with your Qpay Credits.</string>    <string name="payOption_swish">Swish</string>    <string name="payDesc_swish">Pay with Swish</string>    <string name="payOption_credit">Credit Payment</string>    <string name="payDesc_credit">Pay with Credit Card</string>    <string name="payOption_cash">Cash Payment</string>    <string name="payDesc_cash">Pay with Cash</string>    <string name="payOption_later">Pay on Delivery</string>    <string name="payDesc_later">Pay for this order later</string>    <string name="profile_title">Profile</string>    <!-- Strings for menu -->    <string name="log_out">Log Out</string>    <string name="reports">Reports X and Z</string>    <string name="x_report">Report X</string>    <string name="z_report">Report Z</string>    <string name="Log_in">Log In</string>    <!-- Strings for Settings Screen -->    <string name="language">Language</string>    <string name="enter_id">Enter ID</string>    <string name="register_credit_card">Register Card</string>    <!-- Strings for card register screen -->    <string name="card_register_title">Bambora Card Registration</string>    <string name="swedish">Swedish</string>    <string name="english">English</string>    <string name="apply">Apply</string>    <string name="search">search</string>    <string name="ok">OK</string>    <string name="no_pay_options">No Payment Options Available!</string>    <string name="new_order_single">New Order!</string>    <string name="new_order_plural">New Orders!</string>    <string name="no_orders_found_fetch_more">No Orders Found! Click here to fetch more.</string></resources>