<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/first_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/second_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <ImageView
        android:id="@+id/item_image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_pepsi" />

    <TextView
        android:id="@+id/itemNameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="placeholder item"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/first_section"
        app:layout_constraintStart_toEndOf="@+id/item_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemQtyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_line"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first_section"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/second_line"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/pendingBtn"
            android:layout_width="@dimen/order_status_btn_width"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_toggle"
            android:onClick="onToggle"
            android:textColor="@drawable/toggle_color"
            android:textOff="@string/pending"
            android:textOn="@string/pending"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/second_line"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/completedBtn"
            android:layout_width="@dimen/order_status_btn_width"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_toggle"
            android:onClick="onToggle"
            android:textColor="@drawable/toggle_color"
            android:textOff="@string/completed"
            android:textOn="@string/completed"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/second_line"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/deliveredBtn"
            android:layout_width="@dimen/order_status_btn_width"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_toggle"
            android:onClick="onToggle"
            android:textColor="@drawable/toggle_color"
            android:textOff="@string/delivered"
            android:textOn="@string/delivered"
            android:textSize="10sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/completedBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/cancelledBtn"
            android:layout_width="@dimen/order_status_btn_width"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/btn_toggle"
            android:onClick="onToggle"
            android:textColor="@drawable/toggle_color"
            android:textOff="@string/canceled"
            android:textOn="@string/canceled"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/second_line"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>